--- a/src/task2/ResultFXML.fxml
+++ b/src/task2/ResultFXML.fxml
@@ -6,89 +6,100 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="800.0" prefWidth="1200.0" style="-fx-background-image: url(&quot;salsa.jpg&quot;); -fx-background-size: contain;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.ResultController">
-   <children>
-      <Label layoutX="489.0" layoutY="7.0" prefHeight="43.0" prefWidth="222.0" text="Analysis result" textFill="#f2a501">
-         <font>
-            <Font name="Maiandra GD" size="35.0" />
-         </font>
-      </Label>
-      <BarChart fx:id="parameterChart" alternativeRowFillVisible="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="725.0" layoutY="124.0" prefHeight="301.0" prefWidth="391.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
-        <xAxis>
-          <CategoryAxis fx:id="param_yearX" prefHeight="39.0" prefWidth="270.0" side="BOTTOM" tickLabelFill="#f2a501" tickLabelRotation="90.0">
-               <tickLabelFont>
-                  <Font size="12.0" />
-               </tickLabelFont>
-            </CategoryAxis>
-        </xAxis>
-        <yAxis>
-          <NumberAxis fx:id="param_valueY" side="LEFT" tickLabelFill="#f2a501">
-               <tickLabelFont>
-                  <Font size="12.0" />
-               </tickLabelFont>
-            </NumberAxis>
-        </yAxis>
-      </BarChart>
-      <Label layoutX="442.0" layoutY="479.0" prefHeight="43.0" prefWidth="203.0" text="Temperature (C°)" textFill="#f2a501">
-         <font>
-            <Font name="Maiandra GD" size="25.0" />
-         </font>
-      </Label>
-      <Label layoutX="825.0" layoutY="479.0" prefHeight="43.0" prefWidth="222.0" text="Precipitations (mm)" textFill="#f2a501">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label fx:id="parameterLabel" alignment="CENTER" layoutX="765.0" layoutY="89.0" prefHeight="43.0" prefWidth="342.0" textFill="#f2a501">
-         <font>
-            <Font size="23.0" />
-         </font>
-      </Label>
-      <Label fx:id="objectiveLabel" alignment="CENTER" layoutX="302.0" layoutY="53.0" prefHeight="36.0" prefWidth="298.0" text="_" textFill="#f2a501">
-         <font>
-            <Font name="Maiandra GD" size="25.0" />
-         </font>
-      </Label>
-      <Label fx:id="resultLabel" alignment="CENTER" layoutX="600.0" layoutY="53.0" prefHeight="36.0" prefWidth="168.0" text="_" textFill="#f2a501">
-         <font>
-            <Font name="Maiandra GD" size="25.0" />
-         </font>
-      </Label>
-      <PieChart fx:id="pieChart" layoutX="358.0" layoutY="124.0" prefHeight="301.0" prefWidth="371.0" />
-      <LineChart fx:id="tempChart" createSymbols="false" layoutX="334.0" layoutY="518.0" prefHeight="243.0" prefWidth="391.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" tickLabelFill="#f2a501">
-               <tickLabelFont>
-                  <Font size="12.0" />
-               </tickLabelFont>
-            </CategoryAxis>
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" tickLabelFill="#f2a501" tickLabelGap="5.0">
-               <tickLabelFont>
-                  <Font size="12.0" />
-               </tickLabelFont>
-            </NumberAxis>
-        </yAxis>
-      </LineChart>
-      <LineChart fx:id="rainChart" createSymbols="false" layoutX="741.0" layoutY="518.0" prefHeight="243.0" prefWidth="391.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" tickLabelFill="#f2a501" tickLabelGap="5.0">
-               <tickLabelFont>
-                  <Font size="12.0" />
-               </tickLabelFont>
-            </CategoryAxis>
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" tickLabelFill="#f2a501" tickLabelGap="5.0">
-               <tickLabelFont>
-                  <Font size="12.0" />
-               </tickLabelFont>
-            </NumberAxis>
-        </yAxis>
-      </LineChart>
-   </children>
-</Pane>
+
+<ScrollPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="task2.ResultController">
+   <content>
+      <Pane prefHeight="1500.0" prefWidth="800.0" style="-fx-background-image: url(&quot;sfondo2.jpg&quot;);">
+         <children>
+            <Label layoutX="247.0" layoutY="10.0" prefHeight="43.0" prefWidth="222.0" text="Analysis result" textFill="#f2a501">
+               <font>
+                  <Font name="Maiandra GD" size="35.0" />
+               </font>
+            </Label>
+            <BarChart fx:id="parameterChart" alternativeRowFillVisible="false" horizontalGridLinesVisible="false" horizontalZeroLineVisible="false" layoutX="69.0" layoutY="161.0" prefHeight="301.0" prefWidth="391.0" verticalGridLinesVisible="false" verticalZeroLineVisible="false">
+              <xAxis>
+                <CategoryAxis fx:id="param_yearX" prefHeight="39.0" prefWidth="270.0" side="BOTTOM" tickLabelFill="#f2a501" tickLabelRotation="90.0">
+                     <tickLabelFont>
+                        <Font size="12.0" />
+                     </tickLabelFont>
+                  </CategoryAxis>
+              </xAxis>
+              <yAxis>
+                <NumberAxis fx:id="param_valueY" side="LEFT" tickLabelFill="#f2a501">
+                     <tickLabelFont>
+                        <Font size="12.0" />
+                     </tickLabelFont>
+                  </NumberAxis>
+              </yAxis>
+            </BarChart>
+            <Label layoutX="164.0" layoutY="479.0" prefHeight="43.0" prefWidth="203.0" text="Temperature (C°)" textFill="#f2a501">
+               <font>
+                  <Font name="Maiandra GD" size="25.0" />
+               </font>
+            </Label>
+            <Label fx:id="parameterLabel" alignment="CENTER" layoutX="94.0" layoutY="129.0" prefHeight="43.0" prefWidth="342.0" textFill="#f2a501">
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Label>
+            <Label fx:id="objectiveLabel" alignment="CENTER" layoutX="14.0" layoutY="61.0" prefHeight="36.0" prefWidth="298.0" text="_" textFill="#f2a501">
+               <font>
+                  <Font name="Maiandra GD" size="25.0" />
+               </font>
+            </Label>
+            <Label fx:id="resultLabel" alignment="CENTER" layoutX="284.0" layoutY="61.0" prefHeight="36.0" prefWidth="249.0" text="_" textFill="#f2a501">
+               <font>
+                  <Font name="Maiandra GD" size="25.0" />
+               </font>
+            </Label>
+            <PieChart fx:id="pieChart" layoutX="98.0" layoutY="1121.0" prefHeight="301.0" prefWidth="371.0" />
+            <LineChart fx:id="tempChart" createSymbols="false" layoutX="69.0" layoutY="522.0" prefHeight="243.0" prefWidth="391.0">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" tickLabelFill="#f2a501">
+                     <tickLabelFont>
+                        <Font size="12.0" />
+                     </tickLabelFont>
+                  </CategoryAxis>
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" tickLabelFill="#f2a501" tickLabelGap="5.0">
+                     <tickLabelFont>
+                        <Font size="12.0" />
+                     </tickLabelFont>
+                  </NumberAxis>
+              </yAxis>
+            </LineChart>
+            <LineChart fx:id="rainChart" createSymbols="false" layoutX="70.0" layoutY="804.0" prefHeight="243.0" prefWidth="391.0">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" tickLabelFill="#f2a501" tickLabelGap="5.0">
+                     <tickLabelFont>
+                        <Font size="12.0" />
+                     </tickLabelFont>
+                  </CategoryAxis>
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" tickLabelFill="#f2a501" tickLabelGap="5.0">
+                     <tickLabelFont>
+                        <Font size="12.0" />
+                     </tickLabelFont>
+                  </NumberAxis>
+              </yAxis>
+            </LineChart>
+            <Label layoutX="164.0" layoutY="765.0" prefHeight="43.0" prefWidth="222.0" text="Precipitations (mm)" textFill="#f2a501">
+               <font>
+                  <Font size="23.0" />
+               </font>
+            </Label>
+            <Label fx:id="pieChartLabel" layoutX="164.0" layoutY="1078.0" prefHeight="43.0" prefWidth="203.0" text="Top 5 Pie Chart" textFill="#f2a501">
+               <font>
+                  <Font name="Maiandra GD" size="25.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+   </content>
+</ScrollPane>
